# sagg

./: .gitignore  .todos.json  AGENTS.md  Makefile  Taskfile.yml  VIDEO_ANALYSIS_IMPROVEMENTS.md
backend/: API_REFERENCE.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1c6fed600e07_add_artifact_tags_table.py  45eae442a6c4_add_media_lab_jobs_artifacts_and_audit_.py  d35e97373ff7_create_character_relationships_table.py
backend/src/: data.py  data.py.bak  main.py  models.py  models.py.bak
backend/src/alignment/: __init__.py  sbert_aligner.py  smith_waterman.py
backend/src/api/: causality.py  characters.py  episodes.py  graph.py  knowledge.py  media_lab.py  mythos.py  narratives.py  search.py  validation.py
backend/src/collaboration/: crdt.py
backend/src/db/: __init__.py  artifact_ops.py  database.py  db_models.py
backend/src/embeddings/: infrastructure.py
backend/src/generation/: sst_generator.py
backend/src/graphdb/: __init__.py  neo4j_adapter.py  queries.py  routes.py
backend/src/inference/: causal_engine.py
backend/src/media_lab/: __init__.py  artifact_manager.py  civitai.py  executor.py  huggingface.py  lora.py  pipeline.py  presets.py  queue.py  registry.py  tagging.py  workbench.py  worker.py
backend/src/utils/: id_generator.py
backend/src/validation/: consistency.py  rule_engine.py
backend/tests/media_lab/: test_api.py  test_basic.py  test_batch.py  test_civitai.py  test_detailer.py  test_huggingface.py  test_img2img.py  test_instruct_pix2pix.py  test_lora.py  test_pipeline.py  test_presets.py  (+3 more)
(+455 files in other folders)
