[project]
name = "blod-wiki-backend"
version = "0.1.0"
description = "Backend API for Blod svett tårar Dark Adaptation Wiki"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "sqlmodel>=0.0.22",
    "pyyaml>=6.0.2",
    "alembic>=1.14.0",
    "numpy>=1.26.0",
    "sentence-transformers>=3.0.0",
    "neo4j>=5.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
